Fix crash in mouseGrabberItem

Under certain circumstances, point can be null.
All users of mouseGrabberItem does check for nullpointers,
so it should be safe.

Task-number: QTBUG-62055
Change-Id: I1d53b7980efa4fe149714a65f35d05fa306efb06
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>